fix(preferences): align cancel and button, verify btn color

--- a/assets/css/modules/_left-nav.scss
+++ b/assets/css/modules/_left-nav.scss
@@ -78,7 +78,7 @@ ul.aside {
     li.active{
       a {
         span {
-          color: $blue;
+          color: $iris;
           font-weight: 500;
         }
         &:focus {
